# falco-journald-plugin

./: Cargo.toml  README.md
src/: config.rs  extract.rs  lib.rs  source.rs
