[package]
name = "falco-journald-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falco_plugin = { path = "../falco-plugin/falco_plugin", version = "0.3.0" }
foreign-types = "0.5.0"
libsystemd-sys = "0.9.3"
systemd = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
