[package]
name = "falco-journald-plugin"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falco_plugin = "0.4.3"
foreign-types = "0.5.0"
libsystemd-sys = "0.9.3"
systemd = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
